Fxied the alignment issue.

--- a/app/styles/components/class/activities/_gru-class-activities-adding.scss
+++ b/app/styles/components/class/activities/_gru-class-activities-adding.scss
@@ -125,7 +125,7 @@
             grid-row-start: 2;
             grid-column-start: 1;
             grid-column-end: 3;
-            grid-template-columns: auto 115px 10 25px;
+            grid-template-columns: auto 115px 10px 25px;
             input#search-content {
               box-shadow: none;
               border-bottom: 1px solid #ddd;
